add mobile menu and mobile select country

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,6 +8,7 @@
 .header-top__container{
     display: flex;
     justify-content: space-between;
+    // display: none;
 }
 .header-top__left{
     width: 100%;
