--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,7 +8,6 @@
 .header-top__container{
     display: flex;
     justify-content: space-between;
-    // display: none;
 }
 .header-top__left{
     width: 100%;
@@ -93,13 +92,261 @@
     margin-right: 10px;
 }
 
+// header bottom styles
+.header-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 28px;
+}
+.header-bottom__nav__wrapper{
+    margin: 0 20px;
+}
+.header-bottom__form{
+    display: grid;
+    grid-template-columns: minmax(180px,220px) minmax(280px,580px);
+    width: 100%;
+    max-width: 820px;
+    column-gap: 20px;
+}
+.header-bottom__select,
+.header-bottom__search__input{
+    font-family: 'Museo Sans Cyrl';
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid $primary-pink;
+    outline: none;
+    color: #828282;
+}
+.header-bottom__select{
+    padding-bottom: 8px;
+}
+.header-bottom__search{
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 13px 4px 13px;
+    border-bottom: 1px solid $primary-pink;
+}
+.header-bottom__search__input{
+    height: 20px;
+    width: 85%;
+    border-bottom: 1px solid transparent;
+    background-color: transparent;
+}
+.header-bottom__nav{
+    margin-top: 45px;
+}
+.header-bottom__list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+}
+.header-bottom__item{
+    position: relative;
+    cursor: pointer;
+}
+.header-bottom__item+.header-bottom__item{
+    margin-left: 10px;
+}
+.header-bottom__item__texts{
+    display: flex;
+    align-items: center;
+    img{
+        margin-left: 8px;
+    }
+    span{
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 18px;
+        color: $black;
+    }
+    span:hover{
+        color: $primary-pink;
+    }
+}
+.header-bottom__item__list,
+.header-bottom__item__inner__list{
+    position: absolute;
+    list-style-type: none;
+    width: 240px;
+    border: 1px solid #956D84;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+    visibility: hidden;
+    transform: translateY(-5%);
+    opacity: 0;
+    transition: all .3s;
+    background-color: $white;
+}
+.header-bottom__item:hover>.header-bottom__item__list{
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+}
+.header-bottom__item__inner{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    padding: 10px 22px;
+    background-color: #fff;
+    transition: all .3s;
+    .fa-chevron-left{
+        transition: transform .4s;
+    }
+}
+.header-bottom__item__inner:hover{
+    background-color: $primary-pink;
+    .header-bottom__item__inner__txt,
+    .fa-chevron-left{
+        font-weight: 700;
+        color: $white;
+    }
+    .fa-chevron-left{
+        transform: rotate(180deg);
+    }
+}
+.header-bottom__item__inner__txt{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+    color: $black;
+    text-decoration: none;
+}
+.header-bottom__item__inner+.header-bottom__item__inner{
+    margin-top: 13px;
+}
+.header-bottom__item__inner__list{
+   left: 100%;
+   top: 50%;
+   z-index: 10 !important;
+   background-color: #fff;
+   transform: translateX(-10%);
+   margin-left: 6px;
+}
+.header-bottom__item__inner:hover>.header-bottom__item__inner__list{
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
+.header-bottom__item__inner__content{
+    padding: 7px 15px;
+    background-color: $white;
+    transition: all .3s;
+}
+.header-bottom__item__inner__content+.header-bottom__item__inner__content{
+    margin-top: 10px;
+}
+
+.header-bottom__item__inner__link{
+    display: block;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+    color: $black;
+    text-decoration: none;
+    transition: all .3s;
+}
+.header-bottom__item__inner__content:hover{
+    background-color: $primary-pink;
+}
+.header-bottom__item__inner__content:hover>.header-bottom__item__inner__link{
+    font-weight: 700;
+    color: $white;
+}
+.header-bottom__item__link{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 18px;
+    text-decoration: none;
+    color: $black;
+    transition: all .3s;
+}
+.header-bottom__item__link:hover{
+    color: $primary-pink;
+}
+.header-bottom__socials{
+    width: 145px;
+    display: flex;
+    justify-content: space-between;
+}
+.header-bottom__social{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $primary-pink;
+    border-radius: 50%;
+    width: 27px;
+    height: 27px;
+}
+.header-bottom__phone{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+    margin: 20px 0;
+}
+.header-bottom__basket{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-bottom__heart{
+    position: relative;
+}
+.header-bottom__heart__count{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8px;
+    font-weight: 700;
+    line-height: 10px;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    color: $white;
+    background-color: $primary-pink;
+    border-radius: 50%;
+    left: 24px;
+    top: -6px;
+}
+.header-bottom__basket__img{
+    margin: 0 10px;
+}
+.header-bottom__basket__price{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 10px;
+    color: #828282;
+}
 @media only screen and (max-width:1024px){
     .header-top__items,
 .header-top__select,
 .header-top__items a,
 .header-top__register,
-.header-top__login{
+.header-top__login,
+.header-bottom__phone,
+.header-bottom__item__link,
+.header-bottom__item__inner__txt,
+.header-bottom__item__inner__link,
+.header-bottom__basket__price{
     font-size: 14px;
+}
+.header-bottom__item__list,
+.header-bottom__item__inner__list{
+    width: 200px;
+}
+.header-bottom__item__texts{
+    span{
+        font-size: 14px;
+    }
+}
+.header-bottom__phone{
+    text-align:right;
 }
 }
 @media only screen and (max-width:930px){
@@ -120,4 +367,31 @@
     .header-top__select{
         margin-left: 8px;
     }
+    .header-bottom__list{
+        display: none;
+    }
+    .header-bottom__form{
+        grid-template-columns: minmax(150px,220px) minmax(250px,580px);
+    }
+}
+@media only screen and (max-width:780px){
+    .header-top__left{
+        justify-content: flex-start;
+    }
+
+    .header-top__items+.header-top__items{
+        margin-left: 20px;
+    }
+  #header-top__items__hidden{
+    display: none;
+  }
+  .header-bottom{
+        align-items: center;
+  }
+  .header-bottom__form{
+    grid-template-columns: minmax(150px,220px) minmax(200px,580px);
+}
+.header-bottom__basket{
+    display: none;
+}
 }
