--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,6 +1,7 @@
 @import "../../generals/colors.scss";
 .header-modal,
 .header-modal-active{
+    display: none;
     position: fixed;
     width: 100%;
     height: 100vh;
