--- a/src/components/mobileSelectCountry/country.scss
+++ b/src/components/mobileSelectCountry/country.scss
@@ -1,5 +1,6 @@
 @import  "../../generals/colors.scss";
-.country{
+.country,
+.country-active{
     position: fixed;
     display: inline-flex;
     flex-direction: column;
@@ -7,12 +8,13 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height:100vh;
     background-color:$white;
     padding:20px;
-    overflow-y: scroll;
+    overflow-y: auto;
     transform:translateX(-100%);
     transition: all .3s;
+    background-color:$white;
 }
 .country-active{
     transform:translateX(0);
