--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,10 +2,12 @@
 .header{
    background-color: #fff;
 }
+.header-top__wrapper{
+    background-color: $black;
+}
 .header-top__container{
     display: flex;
     justify-content: space-between;
-    background-color: $black;
     height: 50px;
     padding: 15px 0;
 }
