--- a/src/sections/Hero/hero.scss
+++ b/src/sections/Hero/hero.scss
@@ -1,108 +1,295 @@
 @import "../../generals/colors.scss";
-.hero{
-    background-color: #fff;
+.hero {
+  background-color: #fff;
+  position: relative;
 }
 .hero__inner,
-.hero__inner__wrapper2{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 25px;
+.hero__inner__wrapper2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 25px;
 }
-.hero__inner__wrapper{
-    position: relative;
-    max-width: 700px;
-    max-height: 670px;
+.hero__inner__wrapper {
+  position: relative;
+  max-width: 700px;
+  max-height: 670px;
 }
-.hero__inner__img{
-    width: 100%;
-    object-fit: cover;
+.hero__inner__img {
+  width: 100%;
+  object-fit: cover;
 }
-.hero__inner__wrapper2{
-    gap: 20px;
+.hero__inner__wrapper2 {
+  gap: 20px;
 }
-.hero__inner__wrapper2__content{
-    position: relative;
+.hero__inner__wrapper2__content {
+  position: relative;
 }
 .hero__inner__img__txt,
-.hero__inner__big__txt{
-    position: absolute;
-   font-weight: 700;
-   font-size: 36px;
-   line-height: 40px;
-   top: 40px;
-   color: $black;
+.hero__inner__big__txt {
+  position: absolute;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  top: 40px;
+  color: $black;
 }
-.hero__inner__img__txt{
-    left: 20px;
+.hero__inner__img__txt {
+  left: 20px;
 }
-.hero__inner__big__txt{
-    right: 20px !important;
+.hero__inner__big__txt {
+  right: 20px !important;
 }
 .hero__inner__big__txt,
-.hero__inner__img__txt-mark{
-    line-height: 50px;
-    max-width:415px;
+.hero__inner__img__txt-mark {
+  line-height: 50px;
+  max-width: 415px;
 }
-.hero__inner__img__txt-mark{
-    font-weight: 300;
+.hero__inner__img__txt-mark {
+  font-weight: 300;
+  color: $white;
+}
+.hero__aside-bg {
+  display: none;
+  width: 200px;
+  height: 536px;
+  top: 454px;
+  position: absolute;
+}
+.hero__bottom {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 20px;
+  margin-top: 45px;
+}
+.hero__bottom__card {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
+  align-items: center;
+  border: 1px solid $primary-pink;
+  padding: 0 15px 15px 15px;
+  background: url("../../assets/images/hero-actions-bg2.1.png"),
+    url("../../assets/images/hero-actions-bg2.2.png");
+  background-repeat: no-repeat;
+  background-position: left top, right top;
+  background-color: $primary-pink;
+  .hero__bottom__card__info {
+    margin-top: 0;
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
     color: $white;
+  }
 }
-@media only screen and (max-width:1120px){
-    .hero__inner__img__txt,
-.hero__inner__big__txt{
+.hero__bottom__card:first-child {
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  background: url("../../assets/images/hero-actions-bg1.png"),
+    url("../../assets/images/hero-actions-rectangle-left.png");
+  background-repeat: no-repeat;
+  background-position: right, right -1px;
+  background-size: contain, cover;
+  .hero__bottom__card__info {
+    width: 100%;
+    max-width: 210px;
+    margin-top: 58px;
+    text-align: left;
+  }
+  .hero__bottom__card__title {
+    color: $black;
+  }
+  .hero__bottom__card__txt {
+    color: #828282;
+  }
+}
+.hero__bottom__card:last-child {
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  justify-content: space-between;
+  background: url("../../assets/images/hero-actions-bg3.png"),
+    url("../../assets/images/hero-actions-rectangle-right.png");
+  background-repeat: no-repeat;
+  background-position: left, left -1px;
+  background-size: contain, cover;
+  .hero__bottom__card__info {
+    width: 100%;
+    max-width: 204px;
+    margin-top: 58px;
+    text-align: right;
+  }
+  .hero__bottom__card__title {
+    color: $black;
+  }
+  .hero__bottom__card__txt {
+    color: #828282;
+  }
+}
+.hero__bottom__card__info {
+  width: 100%;
+}
+.hero__bottom__card__title {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 35px;
+}
+.hero__bottom__card__txt {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+  margin-top: 15px;
+}
+.hero__bottom__card__img {
+  width: 100px;
+  height: 100px;
+  margin-top: 27px;
+}
+@media only screen and (min-width: 1800px) {
+  .hero__aside-bg {
+    display: block;
+  }
+  .hero__left-bg {
+    background-image: url("../../assets/images/hero-left-bg.png");
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    left: 0;
+    bottom: 0;
+  }
+  .hero__right-bg {
+    background-image: url("../../assets/images/hero-right-bg.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 45px;
+    right: 0;
+  }
+}
+.hero__bottom__hidden {
+  display: none;
+}
+@media only screen and (max-width: 1199px) {
+  .hero__bottom {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+}
+@media only screen and (max-width: 1120px) {
+  .hero__inner__img__txt,
+  .hero__inner__big__txt {
     font-size: 32px;
     line-height: 38px;
+  }
 }
-}
-@media only screen and (max-width:1020px){
-    .hero__inner__img__txt,
-.hero__inner__big__txt{
+@media only screen and (max-width: 1020px) {
+  .hero__inner__img__txt,
+  .hero__inner__big__txt {
     font-size: 28px;
+  }
 }
-}
-@media only screen and (max-width:940px){
-    .hero__inner,
-.hero__inner__wrapper2{
+@media only screen and (max-width: 940px) {
+  .hero__inner,
+  .hero__inner__wrapper2 {
     gap: 16px;
-}
-    .hero__inner__img__txt,
-.hero__inner__big__txt{
+  }
+  .hero__inner__img__txt,
+  .hero__inner__big__txt {
     font-size: 26px;
     line-height: 30px;
+  }
+  .hero__inner__big__txt,
+  .hero__inner__img__txt-mark {
+    line-height: 38px;
+    max-width: 350px;
+  }
 }
-.hero__inner__big__txt,
-.hero__inner__img__txt-mark{
-    line-height:38px;
-    max-width:350px;
-}
-}
-@media only screen and (max-width:850px){
-    .hero__inner__img__txt,
-.hero__inner__big__txt{
+@media only screen and (max-width: 850px) {
+  .hero__inner__img__txt,
+  .hero__inner__big__txt {
     font-size: 22px;
     line-height: 30px;
+  }
+  .hero__inner__big__txt,
+  .hero__inner__img__txt-mark {
+    line-height: 30px;
+    max-width: 300px;
+  }
+  .hero__bottom__card__title {
+    font-size: 22px;
+    line-height: 30px;
+  }
 }
-}
-@media only screen and (max-width:850px){
-    .hero__inner__big__txt,
-    .hero__inner__img__txt-mark{
-        line-height:30px;
-        max-width:300px;
+@media only screen and (max-width: 800px) {
+  .hero__bottom__card__txt {
+    font-size: 12px;
+  }
+  .hero__bottom__card:first-child,
+  .hero__bottom__card:last-child {
+    .hero__bottom__card__info {
+      max-width: 180px;
     }
+  }
 }
-@media only screen and (max-width:740px){
-    .hero__inner{
+@media only screen and (max-width: 767px) {
+  .hero__bottom {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .hero__bottom__card__txt {
+    font-size: 14px;
+  }
+  .hero__bottom__card:first-child,
+  .hero__bottom__card:last-child {
+    .hero__bottom__card__info {
+      max-width: 200px;
+    }
+  }
+}
+@media only screen and (max-width: 740px) {
+  .hero__inner {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     grid-template-columns: repeat(1, 1fr);
     column-gap: 0;
-}
-.hero__inner__wrapper{
+  }
+  .hero__inner__wrapper {
     position: relative;
     max-width: 700px;
     max-height: 670px;
-}
-.hero__inner__big__txt,
-.hero__inner__img__txt-mark{
+  }
+  .hero__inner__big__txt,
+  .hero__inner__img__txt-mark {
     line-height: 50px;
-    max-width:415px;
+    max-width: 415px;
+  }
 }
+@media only screen and (max-width: 485px) {
+  .hero__bottom__hidden {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+  }
+  .hero__bottom {
+    display: none;
+  }
+  .hero__bottom__hidden__info {
+    text-align: center;
+  }
+  .hero__bottom__hidden__img {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    width: 90px;
+    height: 90px;
+    border: 2px solid $primary-pink;
+  }
+  .hero__bottom__hidden__title {
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 15px;
+    margin-top: 10px;
+    color: $black;
+  }
 }
